Rework site structure, menus, collections (#20)
Similar to how I did a UX overhaul after the basic recipe user flows
were built, this has also been an improvisational reworking of the site
now that menus and collections are in place.

Main changes:
* Added to the admin page a way to seed a collection, so I could explore
better the menu and recipe list pages without manually having to enter a
buncha stuff
* Refactored the entire unsplash integration because it wasn't properly
identifying rate limiting, and the library is no longer maintained.
* Built out the menu detail page to have two layouts (fancy, diner) and
link to recipes.
* Generally condensed and cleaned up intermediary pages - now there's
just the home page and the collection detail page.
